--- a/simulations.ipynb
+++ b/simulations.ipynb
@@ -400,6 +400,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0a608be6",
+   "metadata": {},
+   "source": [
+    "### Ivestigating parameters in a more systematic way"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "0c6e4681",
