small comment change

--- a/simulations.ipynb
+++ b/simulations.ipynb
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "a0ac080b",
    "metadata": {},
    "outputs": [],
@@ -316,7 +316,7 @@
     "    subjects = []\n",
     "\n",
     "    for i in range(n_subj):\n",
-    "        subj_seed = rng.integers(1e9) #zorgt voor willekeur\n",
+    "        subj_seed = rng.integers(1e9) #makes it random\n",
     "        sim = simulate_subject(\n",
     "            n_trials= n_trials,\n",
     "            n_inputs= n_inputs,\n",
