--- a/Symptomdata.ipynb
+++ b/Symptomdata.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "1e63df88",
    "metadata": {},
    "outputs": [
@@ -31,7 +31,7 @@
        " 4  4676560   34    1           2.167959      1.647215          0.403726)"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "cf1fc235",
    "metadata": {},
    "outputs": [],
@@ -99,11 +99,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "c8026074",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Had some help of AI\n",
     "def counts_for_subject(df, K=6):\n",
     "    df = df[df[\"Stimulus\"] != 0].copy()\n",
     "    stim = df[\"Stimulus\"].values\n",
@@ -138,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "5ab095c1",
    "metadata": {},
    "outputs": [],
@@ -203,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "83694d03",
    "metadata": {},
    "outputs": [
@@ -295,7 +296,7 @@
        "4  954995  1.560552  0.735497   4.625000     -0.504122   mid"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "ab7fe541",
    "metadata": {},
    "outputs": [
