--- a/Demo/fitting_empirical_dataset.ipynb
+++ b/Demo/fitting_empirical_dataset.ipynb
@@ -10,7 +10,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
+   "id": "c705b879",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys, os\n",
+    "sys.path.insert(0, os.path.abspath(\"..\"))  # Demo -> simulationsHmfc\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "e681b33a-cd37-454c-a44c-fe32aad91831",
    "metadata": {},
    "outputs": [],
@@ -38,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "fc6a59aa",
    "metadata": {},
    "outputs": [],
@@ -64,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "fad3ca1c-029f-4d0b-b094-d5d2ac5311e5",
    "metadata": {},
    "outputs": [],
@@ -86,8 +97,8 @@
     "\"\"\"\n",
     "\n",
     "# Load your empirical dataset (long format)\n",
-    "per = pd.read_csv(\"../../Data/PerceptualTaskData.csv\")\n",
-    "sym = pd.read_csv(\"../../Data/SymptomData.csv\")\n",
+    "per = pd.read_csv(\"../Data/PerceptualTaskData.csv\")\n",
+    "sym = pd.read_csv(\"../Data/SymptomData.csv\")\n",
     "\n",
     "# Rename columns to the names expected throughout this notebook\n",
     "data = per.rename(columns={\n",
@@ -118,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "3374acdf",
    "metadata": {},
    "outputs": [
@@ -204,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "f89c09d9-199f-4559-811e-d16b32e65bfa",
    "metadata": {},
    "outputs": [],
