--- a/Symptomdata.ipynb
+++ b/Symptomdata.ipynb
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "83694d03",
    "metadata": {},
    "outputs": [],
@@ -303,11 +303,10 @@
     "    if ok and np.isfinite(dprime) and (dprime != 0):\n",
     "        mratio = metad / dprime\n",
     "\n",
-    "    # inside for pid, dfsub in per.groupby(\"IDcode\"):\n",
     "    stim = dfsub[\"Stimulus\"].values\n",
     "    resp = dfsub[\"Response\"].values\n",
     "\n",
-    "    # ignore Stimulus==0 for accuracy, net zoals je dat voor d' doet\n",
+    "    # ignore Stimulus==0 for accuracy\n",
     "    mask = stim != 0\n",
     "    acc = np.mean(resp[mask] == (stim[mask] > 0).astype(int))\n",
     "    \n",
@@ -350,7 +349,7 @@
     "# 3) accuracy < .55 gone\n",
     "df = df[df[\"accuracy\"] >= 0.55].copy()\n",
     "\n",
-    "# 4) same confidence rating across all trials weg\n",
+    "# 4) same confidence rating across all trials leave out\n",
     "df = df[~df[\"same_conf\"]].copy()\n",
     "\n",
     "# 5) Remove invalid mratio \n",
